# todoist-cli

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  auth.py  client.py  config.py  main.py
src/todoist_cli/: auth.py  client.py  main.py
